@@ -7,5 +7,5 @@ urlpatterns = [
     path("", users.Index.as_view(), name="index"),
     path("add/", users.Create.as_view(), name="add"),
     path("<str:user_id>/", users.edit, name="edit"),
-    path("<str:user_id>/delete/", users.delete, name="delete"),
+    path("<str:pk>/delete/", users.Delete.as_view(), name="delete"),
 ]
